// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/UploadStateContent should render correctly when both folder and file inputs are available 1`] = `
<div>
  <div
    className="bcu-upload-input-container"
  >
    <FormattedMessage
      defaultMessage="{option1} or {option2}"
      id="be.uploadOptions"
      values={
        Object {
          "option1": <UploadInput
            handleChange={[Function]}
            inputLabel="file"
            inputLabelClass="be-input-link"
          />,
          "option2": <UploadInput
            handleChange={[Function]}
            inputLabel="folder"
            inputLabelClass="be-input-link"
            isFolderUpload={true}
          />,
        }
      }
    />
  </div>
</div>
`;

exports[`elements/content-uploader/UploadStateContent should render correctly when only file input is available 1`] = `
<div>
  <div
    className="bcu-upload-input-container"
  >
    <UploadInput
      handleChange={[Function]}
      inputLabel="file"
      inputLabelClass="be-input-link"
    />
  </div>
</div>
`;
